ad and spacing fixes

--- a/static/css/partials/_card-4.scss
+++ b/static/css/partials/_card-4.scss
@@ -100,7 +100,7 @@
                 }
                 > .content {
                     > .author {
-                        bottom: -3px;;
+                        bottom: -15px;
                     }
                 }
             }
